@@ -1,4 +1,8 @@
-﻿drkns 17.08.2014 00:53:51 +0200 - build 4054
+﻿drkns 17.08.2014 21:15:50 +0200 - build 4055
+
+1. Поддержка elevation при получении полного/свободного размера диска.
+
+drkns 17.08.2014 00:53:51 +0200 - build 4054
 
 1. Уточнение 4052.
 
